--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.ts",
   "scripts": {
     "start:dev": "npx nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "author": "Alex Charco",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
